[package]
name = "inquire"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.2.0"

[dependencies]
libc = "0.2.103"
thiserror = "1.0.29"
filemagic = "0.12.3"
infer = "0.5.0"
unix_mode = "0.1.2"
goblin = "0.4.3"
memmap = "0.7.0"
tabular = "0.1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3