[package]
name = "inquire"
version = "0.1.0"
edition = "2018"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vrmiguel/inquire"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.2.0"
chrono = "0.4.19"

[dependencies]

wizardry = { path = "./wizardry" }

unixstring = "0.2.4"
cstr = "0.2.9"
libc = "0.2.103"
thiserror = "1.0.29"
infer = "0.5.0"
unix_mode = "0.1.2"
goblin = "0.4.3"
memmap = "0.7.0"
tabular = "0.1.4"
fs-err = "2.6.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3