[package]
name = "wizardry"
version = "0.1.0"
edition = "2018"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vrmiguel/inquire"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.103"
bitflags = "1.3.2"
thiserror = "1.0.29"
unixstring = "0.2.2"
